syntax = "proto3";

option csharp_namespace = "Fuse8_ByteMinds.SummerSchool.InternalApi.GrpcContracts";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service GrpcCurrency {
  // Получить текущий курс определенной валюты
  rpc GetCurrentCurrencyRate(CurrencyRequest) returns (CurrencyResponse);

  // Получить курс определенной валюты на конкретную дату
  rpc GetCurrencyRateOnDate(CurrencyRequestWithDate) returns (CurrencyResponse);

  // Получить настройки
  rpc GetSettings(google.protobuf.Empty) returns (SettingsResponse);

  // Получить текущий курс определенной валюты относительно некоторой другой
  rpc GetCurrentCurrencyRateRelativeBaseCurrency(CurrencyRequestWithBaseCurrency) returns (CurrencyResponse);

  // Получить курс определенной валюты относительно некоторой другой на конкретную дату
  rpc GetCurrencyRateOnDateRelativeBaseCurrency(CurrencyRequestWithBaseCurrencyAndDate) returns (CurrencyResponse);
}

message CurrencyRequest {
  CurrencyCode currencyCode = 1;
}

message CurrencyRequestWithDate {
  CurrencyCode currencyCode = 1;
  google.protobuf.Timestamp date = 2;
}

message CurrencyRequestWithBaseCurrency {
  CurrencyCode currencyCode = 1;
  CurrencyCode baseCurrencyCode = 2;
}

message CurrencyRequestWithBaseCurrencyAndDate {
  CurrencyCode currencyCode = 1;
  CurrencyCode baseCurrencyCode = 2;
  google.protobuf.Timestamp date = 3;
}

message CurrencyResponse {
  CurrencyCode currencyCode = 1;
  double value = 2;
}

message SettingsResponse {
  CurrencyCode baseCurrencyCode = 1;
  bool hasAvailableRequests = 2;
}

// Код валют
enum CurrencyCode{
  USD = 0;
  RUB = 1;
  KZT = 2;
  EUR = 3;
}
